--- a/anouncement/templates/anouncement/includes/sidebar.html
+++ b/anouncement/templates/anouncement/includes/sidebar.html
@@ -10,16 +10,19 @@
         </li>
         <li class="has-subnav">
             <a href="{% url 'anouncement:my_anouncement' %}">
-                <i class="fa fa-user fa-2x"></i>
+                <i class="fa fa-list fa-2x"></i>
                 <span class="nav-text">My Announcements</span>
             </a>
         </li>
-      <li>
+    </ul>
+    <ul>
+      <li class="logout">
         <a href="#">
-            <i class="fa fa-folder fa-2x"></i>
-            <span class="nav-text">Category</span>
+            <i class="fa fa-user fa-2x"></i>
+            <span class="nav-text">Profil</span>
         </a>
-      </li>
+    </li>
+    
     </ul>
     <ul class="logout">
         <li class="logout">
