--- a/anouncement/static/css/sidebar.css
+++ b/anouncement/static/css/sidebar.css
@@ -24,8 +24,8 @@ overflow:visible;
 }
 
 .main-menu {
-background:#212121;
-border-right:1px solid #e5e5e5;
+background:#6855d2;
+border-right:1px solid #100b0b;
 position:absolute;
 top:0;
 bottom:0;
@@ -115,12 +115,12 @@ margin:0;
 padding:0;
 }
 .main-menu li:hover>a,nav.main-menu li.active>a,.dropdown-menu>li>a:hover,.dropdown-menu>li>a:focus,.dropdown-menu>.active>a,.dropdown-menu>.active>a:hover,.dropdown-menu>.active>a:focus,.no-touch .dashboard-page nav.dashboard-menu ul li:hover a,.dashboard-page nav.dashboard-menu ul li.active a {
-color:#fff;
-background-color:#000000;
+color:#7e68d6;
+background-color:#696fe5;
 }
 .area {
 float: left;
-background: #e2e2e2;
+background: #282e67;
 width: 100%;
 height: 100%;
 }
