--- a/anouncement/templates/anouncement/userList.html
+++ b/anouncement/templates/anouncement/userList.html
@@ -31,6 +31,7 @@
                 </li>
             {% endfor %}
         </ul>
+        <a href="{% url 'announcement:add_anouncement' %}" class="add-announcement-button">New Announcement</a>
         {% endblock %}
     </div>
     
