--- a/authentication/templates/index.html
+++ b/authentication/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Our Website</title>
-    <link rel="stylesheet" href="{% static 'css/home.css' %}">
+   
 </head>
 <body>
   <header>
@@ -13,7 +13,7 @@
   </header>
 
   <nav>
-    {% if request.user.is_authenticated %}
+    {% if user.is_authenticated %}
       <p>Hello, {{ request.user.username }}!</p>
       <a class="logout-btn" href="{% url 'logout' %}">Logout</a>
     {% else %}
